Fix advanced skin can't apply color dying rendering